In preparation by img and config

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
 title: Icebamboo Blog
-SEOTitle: 冰竹的博客 | Icebamboo Blog
+SEOTitle: Icebamboo的博客 | Icebamboo Blog
 header-img: img/home-bg.jpg
 email: a271093251@live.com
-description: "喜欢设计与实现任何工具"
+description: "爱好设计与实现"
 keyword: ""
 url: "icebamboo97.github.io"              # your host, for absolute URL
 baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
-
+timezone: CN
 
 
 # SNS settings
@@ -50,25 +50,28 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # Duoshuo settings
-duoshuo_username: icebamboo
+#duoshuo_username: icebamboo
 # Share component is depend on Comment so we can NOT use share only.
-duoshuo_share: true                     # set to false if you want to use Comment without Sharing
+#duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
+# LiveRe setttings
+# You can get your uid from https://livere.com/insight/myCode (General web site)
+livere_uid: MTAyMC80MDcyMy8xNzI0OA==
 
 
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
+#ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 # Google Analytics
-ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+#ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
+#ga_domain: auto
 
 
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "真真的学徒，永远怀着大师的心。"
+sidebar-about-description: "只需要前进就好了呀(~ˉ-ˉ~；)..."
 sidebar-avatar: /img/avatar-sponge.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -82,19 +85,13 @@ featured-condition-size: 1              # A tag will be featured if the size of 
 # Friends
 friends: [
     {
-        title: "Hux Blog",
-        href: "http://huangxuan.me"
-    },{
-        title: "Foo",
+        title: "YouYou",
         href: "#"
     },{
-        title: "Bar",
+        title: "Game",
         href: "#"
     },{
-        title: "Example Friends",
-        href: "#"
-    },{
-        title: "It helps SEO",
+        title: "Ball",
         href: "#"
     }
 ]
