--- a/_config.yml
+++ b/_config.yml
@@ -71,8 +71,8 @@ ba_track_id: aa720363c3a4c614d2ccd86dc26c37f0
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "只需要前进就好了呀:)..."
-sidebar-avatar: /img/avatar-sponge.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-about-description: "位面游荡者"
+sidebar-avatar: /img/portrait.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
